chore: update to 1.0.5

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -9,6 +9,82 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+        <script>
+            const colorToRGB = (color) => {
+                if (!!!color) return color;
+                if (color[0] === "#") {
+                    color = color.slice(1);
+                }
+                const num = parseInt(color, 16);
+                const r = num >> 16;
+                const g = (num >> 8) & 255;
+                const b = num & 255;
+                return [r, g, b];
+            };
+            const applyAppColor = (document, darkMode = false) => {
+                let backColor = "#242424";
+                let backAccentColor = "#565656";
+                let foreColor = "#ffffff";
+                let foreAccentColor = "#a0a0a0";
+                let intBackColor = "#444444";
+
+                if (darkMode === false) {
+                    backColor = "#ffffff";
+                    backAccentColor = "#e6e9ec";
+                    foreColor = "#565656";
+                    foreAccentColor = "#8b8b8b";
+                    intBackColor = "#cbcbcb";
+                }
+
+                document.documentElement.style.setProperty(
+                    "--background-color",
+                    backColor,
+                );
+
+                document.documentElement.style.setProperty(
+                    "--background-accent-color",
+                    backAccentColor,
+                );
+
+                document.documentElement.style.setProperty(
+                    "--foreground-color",
+                    foreColor,
+                );
+
+                document.documentElement.style.setProperty(
+                    "--foreground-accent-color",
+                    foreAccentColor,
+                );
+
+                document.documentElement.style.setProperty(
+                    "--background-interactive-color",
+                    intBackColor,
+                );
+            };
+
+            const applyVAColor = (document, foreColor, backColor) => {
+                if (!!foreColor) {
+                    document.documentElement.style.setProperty(
+                        "--va-accent-fore-color",
+                        foreColor,
+                    );
+                }
+                if (!!backColor) {
+                    document.documentElement.style.setProperty(
+                        "--va-accent-back-color",
+                        colorToRGB(backColor),
+                    );
+                }
+            };
+
+            const urlParams = new URLSearchParams(window.location.search);
+            const darkmode = urlParams.get("darkmode") === "true";
+            const foreColor = urlParams.get("forecolor");
+            const backColor = urlParams.get("backcolor");
+
+            applyAppColor(document, darkmode);
+            applyVAColor(document, foreColor, backColor);
+        </script>
         <div id="root"></div>
     </body>
 </html>
